# llm-observability-course

./: .gitignore  alert_webhook.py  context_manager_trace_llm.py  decorator_trace_llm.py  first_trace_llm.py  instrumentation_langchain.py  instrumented_llm.py  langf_obs.py  low_level_trace_llm.py  model_routing.py  pii_redaction.py  prompt_optimazation.py  prompt_optimization.py  pyproject.toml  rag_pipeline_obs.py  semantic_cache.py  token_cal.md  token_calculator-2.py  tokens-demo-1.py
docs/: python_cloud_cookbooks.md  python_cloud_cookbooks_enterprise_onboarding.md  python_cloud_general_api_key.md  python_cloud_general_billing.md  python_cloud_general_organizations.md  python_cloud_general_pricing.md  python_cloud_general_rate_limits.md  python_cloud_general_regions.md
