[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "chromadb>=1.4.1",
    "langchain>=1.2.4",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.1",
    "langfuse>=3.12.0",
    "opentelemetry-instrumentation-langchain>=0.50.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
]
